--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1 {
+  @apply text-4xl leading-tight tracking-tighter md:text-5xl md:leading-none;
+}
+
+p {
+  @apply text-lg leading-relaxed tracking-tight md:text-xl md:leading-relaxed;
 }
