basic hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,10 @@ h1 {
 p {
   @apply text-lg leading-relaxed tracking-tight md:text-xl md:leading-relaxed;
 }
+
+@layer components {
+  .btn {
+    text-transform: none;
+    @apply text-light;
+  }
+}
