finalized expert page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  /* .dark {
     --background: 224 71% 4%;
     --foreground: 213 31% 91%;
 
@@ -67,7 +67,7 @@
     --ring: 216 34% 17%;
 
     --radius: 0.5rem;
-  }
+  } */
 }
 
 @layer base {
@@ -80,6 +80,19 @@
       'rlig' 1,
       'calt' 1;
   }
+}
+
+.rdp-caption_start,
+.rdp-caption_start tbody {
+  @apply mx-auto w-full max-w-md xl:mx-0;
+}
+
+.rdp-caption_start tbody > tr {
+  @apply w-full justify-between;
+}
+
+.rdp-button {
+  @apply rounded-full;
 }
 
 h1 {
